# eduresearch

./: .gitignore  pyproject.toml
src/eduresearch/: crew.py  main.py
src/eduresearch/config/: agents.yaml  tasks.yaml
