[project]
name = "eduresearch"
version = "0.1.0"
description = "Education and Training institution search using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0"
]

[project.scripts]
eduresearch = "eduresearch.main:run"
run_crew = "eduresearch.main:run"
train = "eduresearch.main:train"
replay = "eduresearch.main:replay"
test = "eduresearch.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
